# cs153projectscaffold

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: train_dev.sh
src/data/: sentaurus.py  synthetic.py
src/eval/: anomaly.py  extract_params.py
src/models/: encoder_decoder.py  losses.py
src/training/: train.py
tests/: test_smoke.py
